--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
             <artifactId>java-uuid-generator</artifactId>
             <version>5.1.0</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.locationtech.geotrellis</groupId>
+            <artifactId>geotrellis-proj4_2.12</artifactId>
+            <version>2.3.1</version>
+        </dependency>
     </dependencies>
 
     <build>
