--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>geotrellis-proj4_2.12</artifactId>
             <version>2.3.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.pircbotx</groupId>
+            <artifactId>pircbotx</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
 
     <build>
