--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,7 @@ spring.session.timeout.seconds=86400
 spring.quartz.job-store-type=memory
 spring.jackson.serialization.indent-output=true
 
+spring.web.resources.chain.cache=false
+
 logging.level.org.leolo=debug
 logging.level.org.pircbotx=warn
